# codebase-rag

./: .gitignore  README.md  cursor-sandbox-apparmor.deb  entrypoint.py  main.py  main_server.py  mcp_server.py  pyproject.toml  run_server.py
data/chroma_db/: chroma.sqlite3
docs/: HYBRID_SEARCH.md
scripts/: auto_index.py  health_check.py  index_project.py  reindex_changed.py  setup_git_hook.py  watch.py
src/codebase_rag/: config.py  embeddings.py  indexer.py  registry.py  server.py
systemd/: codebase-rag-server.service.template  mcp-proxy.service
tests/: conftest.py  test_bm25.py  test_config.py  test_embeddings.py  test_embeddings_old.py  test_indexer.py  test_indexer_old.py  test_registry.py  test_rrf.py  test_server.py  test_server_tools.py  test_treesitter_chunking.py
