[project]
name = "codebase-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.4.3",
    "watchdog>=4.0.0",
    "uvicorn>=0.20.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.10.0",
    "rank-bm25>=0.2.2",
]

[project.scripts]
codebase-rag = "codebase_rag.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
